<resources>
    <string name="app_name">EasyTravel</string>
    <string name="package_list_banner_description">Image banner for the PackageList activity</string>
    <string name="package_list_title">Especiais</string>
    <string name="package_list_country">Brasil</string>
    <string name="package_image_description">Destination image preview</string>
    <string name="final_price">Preço final:</string>
    <string name="summary_image_description">Package destination image</string>
    <string name="package_summary_button_text">Realizar pagamento</string>
    <string name="card_name_mask">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020</string>
    <string name="payment_guide_text">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="payment_price_text">Valor da compra:</string>
    <string name="payment_card_number">Número do cartão</string>
    <string name="payment_card_month">MM</string>
    <string name="payment_card_year">AA</string>
    <string name="payment_card_security_code">CVC</string>
    <string name="payment_card_name">Nome no cartão</string>
    <string name="payment_button_text">Finalizar compra</string>
    <string name="payment_summary_banner_description">Image banner for the PaymentSummary activity</string>
    <string name="payment_summary_image_preview">Selected package image preview</string>
    <string name="payment_summary_intro_text">Confira o resumo da compra:</string>
    <string name="payment_summary_confirmation_text">Compra realizada com sucesso :)</string>
    <string name="payment_summary_greeting_text">Parabéns!</string>
</resources>
