<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PackageSummaryActivity">

    <ImageView
        android:id="@+id/activity_package_summary_image"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:contentDescription="@string/summary_image_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/activity_package_summary_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_package_summary_image"
        tools:text="São Paulo" />

    <TextView
        android:id="@+id/activity_package_summary_stay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/activity_package_summary_destination"
        app:layout_constraintTop_toBottomOf="@id/activity_package_summary_destination"
        tools:text="2 dias" />

    <TextView
        android:id="@+id/activity_package_summary_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/activity_package_summary_stay"
        app:layout_constraintTop_toBottomOf="@id/activity_package_summary_stay"
        tools:text="08/12 - 10/12 de 2017" />

    <TextView
        android:id="@+id/activity_package_summary_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/activity_package_summary_date"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="R$ 243,99" />

    <TextView
        android:id="@+id/activity_package_summary_price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/final_price"
        app:layout_constraintBottom_toTopOf="@id/activity_package_summary_price"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/activity_package_summary_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/custom_button_layout"
        android:text="@string/package_summary_button_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>